--- a/src/app/components/task-list/task-list.component.scss
+++ b/src/app/components/task-list/task-list.component.scss
@@ -1,10 +1,12 @@
+@import "src/styles";
+
 .task-list {
   background-color: #eceded;
   min-width: 300px;
   width: 100%;
   padding: 0;
   list-style: none;
-  margin: 0;
+  margin: 0 0 20px 0;
 
   .task {
     padding: 10px;
@@ -13,6 +15,8 @@
     position: relative;
     flex-direction: column;
     border: 1px solid #e2e2e2;
+    cursor: pointer;
+    transition: all .2s ease-in-out;
 
     &--description {
       display: flex;
@@ -42,6 +46,10 @@
     }
     &:nth-child(2n) {
       background-color: #e1e5e5;
+    }
+    &:hover {
+      box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.25);
+      z-index: 1;
     }
   }
   .delete-marker {
