--- a/src/app/routes/list-page/list-page.component.html
+++ b/src/app/routes/list-page/list-page.component.html
@@ -1,7 +1,9 @@
 <div class="list-wrapper">
-  <div class="list-container">
-    <app-add></app-add>
-    <app-list></app-list>
+  <app-spinner *ngIf="spinner"></app-spinner>
+  <div class="list-container" [ngClass]="{ 'veiled': spinner }">
+    <search-bar (search)="getFilteredTasks($event)"></search-bar>
+    <add-task></add-task>
+    <task-list [taskListData]="taskList"></task-list>
   </div>
 </div>
 
