--- a/src/app/routes/list-page/list-page.component.scss
+++ b/src/app/routes/list-page/list-page.component.scss
@@ -3,6 +3,8 @@
 .list-wrapper {
   display: flex;
   justify-content: flex-start;
+  position: relative;
+  width: max-content;
 }
 .list-container {
   margin: 50px 20px;
@@ -10,8 +12,14 @@
   max-width: 100%;
   padding: 20px;
   background: #f2f2f2;
+  position: relative;
   border-radius: 3px;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.43);
+  transition: all .3s linear;
+
+  &.veiled {
+    filter: opacity(0.2);
+  }
 }
 
 .item-details {
