--- a/src/app/components/task-list/task-list.component.scss
+++ b/src/app/components/task-list/task-list.component.scss
@@ -35,10 +35,10 @@
       font-style: italic;
       margin-bottom: 5px;
     }
-    &--text {
+    &--name {
        text-decoration: none;
       font-weight: bold;
-       color: #000;
+       color: $color-type-primary;
        transition: all .3s ease;
        &:hover {
          color: lighten(#000, 20%);
@@ -48,7 +48,7 @@
       background-color: #e1e5e5;
     }
     &:hover {
-      box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.25);
+      box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.15);
       z-index: 1;
     }
   }
@@ -68,4 +68,10 @@
       opacity: .4;
     }
   }
+}
+.no-tasks-msg {
+  background: #f2f2f2;
+}
+.button-container {
+  text-align: center;
 }
