--- a/src/app/routes/sign-in-page/sign-in-page.component.html
+++ b/src/app/routes/sign-in-page/sign-in-page.component.html
@@ -14,11 +14,11 @@
       <span *ngIf="errorMessage" class="error-message">{{errorMessage}}</span>
       <label>
         Email:
-        <input type="email" formControlName="email">
+        <input type="email" formControlName="email" class="input-rounded">
       </label>
       <label>
         Password:
-        <input type="password" formControlName="password">
+        <input type="password" formControlName="password" class="input-rounded">
       </label>
 
       <button class="cool-button" type="submit" [disabled]="!loginForm.valid">Sign In</button>
