--- a/src/app/routes/sign-in-page/sign-in-page.component.scss
+++ b/src/app/routes/sign-in-page/sign-in-page.component.scss
@@ -1,3 +1,5 @@
+@import "./src/styles";
+
 .login-form {
   padding: 20px;
   border-radius: 3px;
@@ -20,11 +22,6 @@
       display: flex;
       flex-direction: column;
       margin: 10px 0 0 0;
-    }
-    input {
-      width: 300px;
-      font-size: 16px;
-      padding: 5px;
     }
   }
 
