--- a/src/app/routes/sign-up-page/sign-up-page.component.html
+++ b/src/app/routes/sign-up-page/sign-up-page.component.html
@@ -13,11 +13,11 @@
     <form [formGroup]="loginForm" (ngSubmit)="signUp()">
       <label>
         Email:
-        <input type="email" formControlName="email">
+        <input type="email" formControlName="email" class="input-rounded">
       </label>
       <label>
         Password:
-        <input type="password" formControlName="password">
+        <input type="password" formControlName="password" class="input-rounded">
       </label>
 
       <button class="cool-button" type="submit" [disabled]="!loginForm.valid">Sign Up</button>
