--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 $font-header: 'Roboto Condensed', sans-serif;
-$font-type: 'Open Sans', sans-serif;
-$gradient-main: linear-gradient(-45deg, #2d2c2e, #404146);
-$gradient-secondary: linear-gradient(-45deg, #aca8e0, #525589);
+$font-type: 'Muli', sans-serif;
+$gradient-main: linear-gradient(-45deg, #5f3c82, #404146);
+$gradient-color-one: #aca8e0;
+$gradient-color-two: #525589;
+$gradient-secondary: linear-gradient(-45deg, $gradient-color-one, $gradient-color-two);
 $color-type-primary: #38393d;
 $border-color-primary: #e2e2e2;
 
@@ -10,6 +12,7 @@ $border-color-primary: #e2e2e2;
   font-family: $font-type;
   margin: 0;
   padding: 0;
+  color: $color-type-primary;
 }
 
 .centrifier {
@@ -17,6 +20,17 @@ $border-color-primary: #e2e2e2;
   max-width: 100%;
   margin: 0 auto;
   position: relative;
+}
+
+.container {
+  width: 500px;
+  max-width: 100%;
+  border-radius: 3px;
+  box-sizing: border-box;
+  margin: 50px;
+  padding: 20px;
+  background-color: darken(#fff, 5%);
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.43);
 }
 
 body {
@@ -31,21 +45,20 @@ body {
 }
 
 .cool-button {
-  padding: 10px 15px;
+  padding: 15px 25px;
   background: $gradient-main;
   border: none;
-  border-radius: 5px;
-  color: #fff;
-  font-size: 17px;
-  letter-spacing: 2px;
-  font-family: $font-header;
+  border-radius: 2rem;
+  color: #efe7ef;
+  font-size: 14px;
+  letter-spacing: 1px;
+  font-family: $font-type;
   cursor: pointer;
   text-decoration: none;
   width: max-content;
-  text-transform: uppercase;
-  transition: all .3s ease-in-out;
+  transition: all .3s linear;
   &:hover:not(:disabled) {
-    box-shadow: 0 0 10px 0 rgba(0,0,0,.7);
+    box-shadow: 0 0 10px rgba(0,0,0,.45), 0 0 3px rgba(0,0,0,.2);
   }
   &:disabled {
     filter: grayscale(1) opacity(0.5);
@@ -53,13 +66,40 @@ body {
   &.rounded {
     border-radius: 20px;
   }
+  &.plus {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    &:before {
+      content: '';
+      display: inline-block;
+      width: 15px;
+      height: 15px;
+      background: url("/assets/images/plus_icon.svg") center no-repeat;
+      background-size: contain;
+      margin-right: 15px;
+    }
+  }
+  &.submit {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    &:before {
+      content: '';
+      display: inline-block;
+      width: 15px;
+      height: 15px;
+      background: url("/assets/images/submit.svg") center no-repeat;
+      background-size: contain;
+      margin-right: 15px;
+    }
+  }
   &.txt-small {
     font-size: 12px;
   }
 }
 
 .bright-text {
-  display: inline;
   font-weight: bold;
   background: $gradient-secondary;
   -webkit-background-clip: text;
@@ -76,14 +116,14 @@ body {
 .simple-button {
   @extend .cool-button;
   background: transparent;
-  box-shadow: inset 0 0 0 2px $color-type-primary;
   color: $color-type-primary;
-  transition: all .1s ease-in-out;
+  border: 2px solid $color-type-primary;
+  transition: all .3s linear;
+  padding: 5px 15px;
 
   &:hover {
-    background-color: $color-type-primary;
-    color: #fff;
-    box-shadow: none;
+    background-color: darken(#fff, 20%);
+    box-shadow: none !important;
   }
 }
 
@@ -106,6 +146,36 @@ body {
 
 .o-d {
   outline: none;
+}
+
+input {
+  font-size: 14px;
+  width: 300px;
+  padding: 5px;
+  box-sizing: border-box;
+
+  &.input-rounded {
+    border-radius: 20px;
+    height: 36px;
+    padding: 5px 10px;
+    border: 1px solid $border-color-primary;
+  }
+  &.controls {
+    padding: 5px 37px 5px 15px;
+  }
+}
+
+.navigation {
+  margin-bottom: 20px;
+
+  .nav-back {
+    display: inline-block;
+    color: #3c63be;
+    font-style: italic;
+    text-decoration: none;
+    cursor: pointer;
+    transition: all .1s ease;
+  }
 }
 
 @mixin glass {
