--- a/src/styles.scss
+++ b/src/styles.scss
@@ -58,7 +58,7 @@ body {
   width: max-content;
   transition: all .3s linear;
   &:hover:not(:disabled) {
-    box-shadow: 0 0 10px rgba(0,0,0,.45), 0 0 3px rgba(0,0,0,.2);
+    box-shadow: 0 0 10px rgba(85, 14, 86, 0.45), 0 0 3px rgba(85,14,86,.2);
   }
   &:disabled {
     filter: grayscale(1) opacity(0.5);
