--- a/src/styles.scss
+++ b/src/styles.scss
@@ -135,13 +135,16 @@ body {
 
 .error-message {
   display: block;
+  position: absolute;
   text-align: center;
   font-size: 12px;
   color: #fb5035;
   border: 1px solid #fb5035;
   border-radius: 5px;
   padding: 10px;
-  margin: 10px;
+  bottom: -70px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .o-d {
@@ -176,6 +179,10 @@ input {
     cursor: pointer;
     transition: all .1s ease;
   }
+}
+
+.veiled {
+  filter: opacity(0.2);
 }
 
 @mixin glass {
